# models/fileModels.go
@@ -1,20 +1,16 @@
 package models
 
 import (
-	"net/url"
 	"time"
 )
 
 type File struct {
-	ID              uint `gorm:"primarykey"`
-	CreatedAt       time.Time
-	UpdatedAt       time.Time
-	DeletedAt       *time.Time `gorm:"index"`
-	Name            string
-	url             url.URL
-	lastModified    string
-	cacheExpiration string
-	CachedUrl       string
-	created         string
-	owner           string
+	ID          uint `gorm:"primarykey"`
+	CreatedAt   time.Time
+	UpdatedAt   time.Time
+	DeletedAt   *time.Time `gorm:"index"`
+	Name        string
+	Owner       string
+	ContentType string
+	Size        int64
 }
